--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: nlstools
 Version: 0.0-11
-Date: Fri Feb 11 08:47:00 CET 2011
+Date: Fri Apr  8 11:22:57 CEST 2011
 Title: Tools for nonlinear regression diagnostics
 Author: Florent Baty <florent.baty@gmail.com> and Marie-Laure
         Delignette-Muller <ml.delignette@vetagro-sup.fr>, with
@@ -14,4 +14,4 @@ Repository: CRAN
 Repository/R-Forge/Project: nlstools
 Repository/R-Forge/Revision: 5
 Date/Publication: 2011-02-11 08:47:00
-Packaged: 2011-02-11 11:09:55 UTC; florent
+Packaged: 2011-02-11 08:47:00 UTC; rforge
