--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: nlstools
-Version: 0.0-12
-Date: Fri Apr 16:58:00 CET 2012
+Version: 0.0-13
+Date: Fri Nov 30 11:36:22 CET 2012
 Title: Tools for nonlinear regression diagnostics
 Author: Florent Baty <florent.baty@gmail.com> and Marie-Laure
         Delignette-Muller <ml.delignette@vetagro-sup.fr>, with
@@ -13,5 +13,5 @@ License: GPL (>= 2)
 Repository: CRAN
 Repository/R-Forge/Project: nlstools
 Repository/R-Forge/Revision: 5
-Date/Publication: 2012-04-20 16:59:00
-Packaged: 2012-04-20 15:18:41 UTC; florent
+Date/Publication: 2012-11-30 13:24:38
+Packaged: 2012-11-30 10:56:59 UTC; florent
