git-svn-id: svn://svn.r-forge.r-project.org/svnroot/nlstools@12 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: nlstools
-Version: 0.0-13
-Date: Fri Nov 30 11:36:22 CET 2012
+Version: 0.0-14
+Date: Mon dec 03 16:00:00 CET 2012
 Title: Tools for nonlinear regression diagnostics
 Author: Florent Baty <florent.baty@gmail.com> and Marie-Laure
-        Delignette-Muller <ml.delignette@vetagro-sup.fr>, with
+        Delignette-Muller <marielaure.delignettemuller@vetagro-sup.fr>, with
         contributions from Sandrine Charles, Jean-Pierre Flandrois
 Maintainer: Florent Baty <florent.baty@gmail.com>
 Depends: stats
@@ -12,6 +12,6 @@ Description: Several tools for assessing the quality of fit of a
 License: GPL (>= 2)
 Repository: CRAN
 Repository/R-Forge/Project: nlstools
-Repository/R-Forge/Revision: 5
-Date/Publication: 2012-11-30 13:24:38
-Packaged: 2012-11-30 10:56:59 UTC; florent
+Repository/R-Forge/Revision: 12
+Date/Publication: 2012-12-03 16:00:00
+Packaged: 2012-12-03 16:00:00 UTC; Marie Laure
